# share-post

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/share_post/: __init__.py  conftest.py  share_post.py  test_share_post.py
pelican/plugins/share_post/test_data/: article.md
